<resources>
    <string name="app_name">Jumys</string>
    <string name="customer">Заказчик</string>

    <string name="home">Главная</string>
    <string name="claim">Заявки</string>
    <string name="to_order">Новые заказы</string>
    <string name="support">Поддержка</string>
    <string name="profile">Профиль</string>

    //Content
    <string name="support_text">Служба поддержки</string>

    //Role
    <string name="i_want_to_find_a_specialist_for_the_execution_of_works">Хочу найти специалиста для выролнение работ</string>
    <string name="specialist">Специалист</string>
    <string name="find_a_job_and_earn_money">Найти работу и заработать деньги</string>
    <string name="enter_your_phone_number">Введите номер телефона</string>
    <string name="by_clicking_next_you_agree_to">Нажимая “Далее”, вы соглашаетесь с</string>
    <string name="service_rules">правилами сервиса</string>
    <string name="mask_phone">+7(</string>
    <string name="next">Далее</string>
    <string name="confirm_finish">Нажмите ещё раз для выхода</string>
    <string name="skip_registration">Пропустить регистрацию</string>
    <string name="enter_the_code_from_sms">Введите код из СМС</string>
    <string name="send_sms_number">Отправлен на номер загрузка…</string>
    <string name="send_sms_number_phone">Отправлен на номер</string>
    <string name="you_can_send_the_code_again_via">Отправить код повторно можно через: загрузка…</string>
    <string name="contact_details">Контактные данные</string>
    <string name="please_enter_a_name_to_continue">Чтобы продолжить, укажите имя</string>
    <string name="what_is_your_name">Как вас зовут?</string>
    <string name="enter_your_name">Введите имя</string>
    <string name="enter_your_sure_name">Введите фамилию</string>
    <string name="enter_your_father">Введите отечество</string>
    <string name="email">Электронная почта</string>
    <string name="enter_your_email">Введите email</string>
    <string name="for_what">Для чего?</string>
    <string name="jumys_text">«Jumys - простое решение для непростых задач! Бесплатная площадка для поиска специалистов. Мы поможем быстро найти лучших специалистов. Широкий выбор услуг по разным квалификациям всегда в Вашем смартфоне!»</string>
    <string name="how_does_it_work">Как работает Jumys.kz?</string>
    <string name="further">Далее</string>
    <string name="dialog_exit">Выйти</string>
    <string name="add_photo">Добавить анкету</string>

    //Button
    <string name="ok">Oк</string>

    //Map
    <string name="location_permissions">Разрешения на местоположение</string>
    <string name="give_permissions_for_geolocation">Для корректной работы приложения необходимо дать разрешения на геолокацию</string>
    <string name="search_location">Идет поиск…</string>

    //Call
    <string name="call"> "Чтобы позвонить, пожалуйста, Нажмите Разрешить"</string>

    //Обработка ошибки
    <string name="error_unknown_title">Что-то пошло не так…</string>
    <string name="error_no_internet_title">Отсутствует интернет соединение</string>
    <string name="error_failed_connection_to_server">Не удалось установить соединение с сервером!</string>
    <string name="error_unknown_body">Пожалуйста проверьте интернет соединени или попробуйте позднее</string>
    <string name="error_no_internet_msg">Пожалуйста проверьте ваше интернет соединение и попробуйте ещё раз</string>
    <string name="apply">Подать заявку</string>
    <string name="recommended_specialists">Рекомендованные специалисты</string>
    <string name="popular_questions">Популярные вопросы</string>
    <string name="advice">Советы</string>
    <string name="loading">Загрузка…</string>
    <string name="payment_amount">Сумма оплаты:</string>
    <string name="zero">0,0</string>
    <string name="back">Назад</string>
    <string name="write">Написать…</string>
    <string name="settings">Настройки</string>
    <string name="username">Имя пользователя</string>
    <string name="phone">Телефон</string>
    <string name="city">Город</string>
    <string name="favorite">Избранные</string>
    <string name="feedback">Обратная связь</string>
    <string name="contact_technical_support">Написать в техподдержку</string>
    <string name="request_a_call">Заказать звонок</string>
    <string name="complaints_and_suggestions">Жалобы и предложения</string>
    <string name="login_as_a_specialist">Войти как специалист</string>
    <string name="sign_out_of_your_account">Выйти из аккаунта</string>
    <string name="search">Поиск</string>
    <string name="orders_by_category">Заказы по категориям</string>
    <string name="find_orders_nearby">Найти заказы поблизости</string>
    <string name="your_balance">Ваш баланс</string>
    <string name="zero_units">0 ед.</string>
    <string name="personal_account">Лицевой счет:</string>
    <string name="top_up">Пополнить</string>
    <string name="enter_promo_code">Ввести промокод</string>
    <string name="my_profile">Моя анкета</string>
    <string name="change_city">Изменить город</string>
    <string name="invite_a_specialist_or_client">Пригласить спеца или клиента</string>
    <string name="balance_statement">Выписка по балансу</string>
    <string name="about_app">О приложении</string>
    <string name="receive_applications_at_night">Получать заявки в ночное время</string>
    <string name="time">с 23:00 до 09:00</string>
    <string name="login_as_customer">Войти как клиент</string>
    <string name="list">Списком</string>
    <string name="feedbacks">Отклики</string>
    <string name="map">Карта</string>
    <string name="calling">Позвонить</string>
    <string name="what_should_be_done">Что нужно сделать?</string>
    <string name="to_show_on_the_map">Показать на карте</string>
    <string name="budget">Бюджет</string>
    <string name="photo_video">Фото/Видео</string>
    <string name="about_myself">О себе</string>
    <string name="accept_the_artist">Принять испольнителя</string>
    <string name="customers_reviews">Отзывы клиентов (0)</string>
    <string name="questionnaire">Анкета</string>
    <string name="first_name">Имя</string>
    <string name="edit_first_name">Введите имя</string>
    <string name="surname">Фамилия</string>
    <string name="edit_surname">Введите фамилию</string>
    <string name="fatherland">Отечество</string>
    <string name="enter_fatherland">Введите отечество</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="days">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="gender">Пол</string>
    <string name="man">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="iin">ИИН<font color="#DC0F0F">*</font></string>
    <string name="enter_iin">Введите иин</string>
    <string name="change">Изменить</string>
    <string name="app_version">Версия приложения 1.0</string>
    <string name="too_jumys">© 2021 ТОО “Jumys”</string>
    <string name="follow_us_on_social_colors">Следите за нами в социальных цветах</string>
    <string name="we_will_contact_you_shortly">Свяжемся с вами в ближайшее время</string>
    <string name="fill_out_a_questionnaire">Чтобы продолжить, заполните анкету</string>

    <string name="z">*</string>
    <string name="ip">ИП</string>
    <string name="too">ТОО</string>
    <string name="surnname">Фамилия</string>
    <string name="enter_your_surname">Введите фамилию</string>
    <string name="enter_your_fatherland">Введите отечество</string>
    <string name="bithday">Дата рождения</string>
    <string name="day">День</string>
    <string name="women">Женщина</string>
    <string name="bin">БИН</string>
    <string name="enter_your_bin">Введите БИН</string>
    <string name="enter_your_iin">Введите ИИН</string>
    <string name="number_register">Номер свидетельства о регистрации<font color="#DC0F0F">*</font></string>
    <string name="enter_the_number">Введите номер</string>
    <string name="attach_photo">Прикрепить фото свидетельства о регистрации<font color="#DC0F0F">*</font></string>
    <string name="attach_photo_human">Прикрепить фото свидетельства о регистрации юридического лица<font color="#DC0F0F">*</font></string>
    <string name="phone_number">Номер телефона</string>
    <string name="service_budget">Бюджет за услугу</string>
    <string name="enter_the_amount">Ввести сумму</string>
    <string name="publish">Опубликовать</string>
    <string name="camera_prompt">Нажмите один раз на иконку, чтобы сделать фото или удерживайте для съемки видео.</string>

    <string name="you_are_logged_in_under_your_account_on_another_device">Под вашим Аккаунтом вошли на другом устройстве!</string>
    <string name="our_application_has_been_updated_please_update">Вышло обновление нашего приложения. Пожалуйста обновите!</string>
    <string name="enter_sms">Введите смс код!</string>
    <string name="master">master</string>
    <string name="client">client</string>
    <string name="filter">Фильтр</string>

    <string name="validate_day">Напишите дату вашего рождения</string>
    <string name="validate_month">Введите ваш месяц рождения</string>
    <string name="validate_year">Напишите свой год рождения</string>
    <string name="quest_moderator">Анкета отправлена на модерацию</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. At eu lobortis id aliquet vivamus orci. Dui tincidunt et turpis diam sed sollicitudin. Pellentesque ut amet justo mattis a tortor. Molestie mauris venenatis hac orci.</string>

</resources>