<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/claim_menu"
        android:icon="@drawable/ic_claim"
        android:title="@string/claim"
        app:showAsAction="always" />

    <item
        android:id="@+id/placeHolder"
        android:title="" />

    <item
        android:id="@+id/support_menu"
        android:icon="@drawable/ic_support"
        android:title="@string/support"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always" />

</menu>